--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,10 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
 
-flutter_launcher_icons:
-  android: "launcher_icon"
+flutter_icons:
+  android: true
   ios: true
-  image_path: "assets/icon/guc.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  image_path: "./assets/guc.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
